chore: Add badge in checklist

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                   aria-label="Architecture des composants métier développés (Structure, Découpage …)"
                 />
                 <span
-                  >Architecture des composants métier développés (Structure,
-                  Découpage …)</span
+                  >Architecture des composants (Structure modulable,
+                  découpage fonctionnel, etc...)</span
                 >
-                <span class="demo-badge">Démo 3</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -199,8 +199,8 @@
                   title="Patterns de conception"
                   aria-label="Patterns de conception implémentés"
                 />
-                <span>Patterns de conception implémentés</span>
-                <span class="demo-badge">Démo 3</span>
+                <span>Patterns de conception implémentés (Singleton, Factory, Observer, Strategy, Adapter, Repository, MVC / MVVM / MVU,etc...)</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -215,7 +215,7 @@
                   >Gestion des règles métier (isolation des règles, possibilité
                   de les faire évoluer sans impacter le reste du projet …)</span
                 >
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -286,7 +286,7 @@
                   title="Collaboration et communication"
                   aria-label="Collaboration et communication au sein de l'équipe"
                 />
-                <span>Collaboration et communication au sein de l'équipe</span>
+                <span>Collaboration et communication au sein de l'équipe (Trello, Notion, Asana, Word, Slack, etc ...)</span>
                 <span class="demo-badge">Démo 1</span>
               </label>
             </li>
@@ -365,8 +365,8 @@
                   title="Patterns d'architecture"
                   aria-label="Patterns d'architecture utilisés"
                 />
-                <span>Patterns d'architecture utilisés</span>
-                <span class="demo-badge">Démo 3</span>
+                <span>Patterns d'architecture utilisés (Clean Architecture, Hexagonal, Microservices, Event-Driven Architecture)</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -388,18 +388,6 @@
           <h3>Conception de la base de données</h3>
           <ul class="checklist">
             <li>
-              <label for="modele-donnees">
-                <input
-                  type="checkbox"
-                  id="modele-donnees"
-                  title="Modèle de données"
-                  aria-label="Modèle de données et schéma"
-                />
-                <span>Modèle de données et schéma</span>
-                <span class="demo-badge">Démo 3</span>
-              </label>
-            </li>
-            <li>
               <label for="optimisation-bd">
                 <input
                   type="checkbox"
@@ -408,7 +396,7 @@
                   aria-label="Optimisation et indexation"
                 />
                 <span>Optimisation et indexation</span>
-                <span class="demo-badge">RNCP blanc</span>
+                <span class="demo-badge">RNCP blanc Optionnel</span>
               </label>
             </li>
             <li>
@@ -420,7 +408,7 @@
                   aria-label="Sécurité et protection des données"
                 />
                 <span>Sécurité et protection des données</span>
-                <span class="demo-badge">Démo 2 - 3 - 4 </span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
           </ul>
@@ -452,7 +440,7 @@
                   aria-label="Gestion des requêtes et transactions"
                 />
                 <span>Gestion des requêtes et transactions</span>
-                <span class="demo-badge">Démo 3</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -464,7 +452,7 @@
                   aria-label="Mise en cache et optimisation des performances"
                 />
                 <span>Mise en cache et optimisation des performances</span>
-                <span class="demo-badge">RNCP blanc</span>
+                <span class="demo-badge">RNCP blanc - Optionnel</span>
               </label>
             </li>
           </ul>
@@ -482,7 +470,7 @@
                   aria-label="Documentation technique de l'API"
                 />
                 <span>Documentation technique de l'API</span>
-                <span class="demo-badge">Démo 3</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -494,7 +482,7 @@
                   aria-label="Documentation du code source"
                 />
                 <span>Documentation du code source</span>
-                <span class="demo-badge">Démo 2 - 3 - 4</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -524,7 +512,7 @@
                   aria-label="Environnement de test"
                 />
                 <span>Environnement de test</span>
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -535,7 +523,7 @@
                   title="Configuration"
                   aria-label="Configuration et paramètres"
                 />
-                <span>Configuration et paramètres</span>
+                <span>Configuration et paramètres ( dev - test - prod optionnel )</span>
                 <span class="demo-badge">Démo 4</span>
               </label>
             </li>
@@ -547,7 +535,7 @@
                   title="Sécurité déploiement"
                   aria-label="Sécurité du déploiement"
                 />
-                <span>Sécurité du déploiement</span>
+                <span>Sécurité du déploiemen (Variables d'environnement, Acès SSH, Principe de moindre privilège, HTTPS en production, etc ...)</span>
                 <span class="demo-badge">Démo 4</span>
               </label>
             </li>
@@ -572,7 +560,7 @@
                   aria-label="Stratégie de tests (unitaires, intégration, e2e)"
                 />
                 <span>Stratégie de tests (unitaires, intégration, e2e)</span>
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -584,7 +572,7 @@
                   aria-label="Plans de tests réalisés"
                 />
                 <span>Plans de tests réalisés</span>
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -596,7 +584,7 @@
                   aria-label="Outils et frameworks de tests utilisés"
                 />
                 <span>Outils et frameworks de tests utilisés</span>
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -608,7 +596,7 @@
                   aria-label="Résultats des tests et corrections apportées"
                 />
                 <span>Résultats des tests et corrections apportées</span>
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -620,7 +608,7 @@
                   aria-label="Tests de sécurité et de performance"
                 />
                 <span>Tests de sécurité et de performance</span>
-                <span class="demo-badge">Démo 4</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
           </ul>
@@ -633,14 +621,14 @@
               <label>
                 <input type="checkbox" aria-label="Documentation technique" />
                 <span>Documentation technique</span>
-                <span class="demo-badge">Démo 2 - 3 - 4</span>
+                <span class="demo-badge">Démo 4</span>
               </label>
             </li>
             <li>
               <label>
                 <input type="checkbox" aria-label="Documentation utilisateur" />
                 <span>Documentation utilisateur/utilisatrices</span>
-                <span class="demo-badge">RNCP blanc ( si besoin ) </span>
+                <span class="demo-badge">RNCP blanc - Optionnel</span>
               </label>
             </li>
             <li>
@@ -664,7 +652,7 @@
               <label>
                 <input type="checkbox" aria-label="Procédures de sauvegarde" />
                 <span>Procédures de sauvegarde et de restauration</span>
-                <span class="demo-badge">RNCP blanc </span>
+                <span class="demo-badge"> Optionnel </span>
               </label>
             </li>
           </ul>
@@ -693,7 +681,8 @@
                   title="Automatisation"
                   aria-label="Automatisation des processus"
                 />
-                <span>Automatisation des processus</span>
+                <span>Automatisation des processus (Lancer les tests à chaque push, Dependabot, Déployer sur un serveur, Générer un changelog)</span>
+                <span class="demo-badge">Démo 4</span>
               </label>
             </li>
             <li>
@@ -705,6 +694,7 @@
                   aria-label="Monitoring et alerting"
                 />
                 <span>Monitoring et alerting</span>
+                <span class="demo-badge">Démo 4</span>
               </label>
             </li>
             <li>
@@ -716,6 +706,7 @@
                   aria-label="Gestion des versions et des releases"
                 />
                 <span>Gestion des versions et des releases</span>
+                <span class="demo-badge">Démo 4</span>
               </label>
             </li>
             <li>
@@ -727,6 +718,7 @@
                   aria-label="Sécurisation du pipeline de déploiement"
                 />
                 <span>Sécurisation du pipeline de déploiement</span>
+                <span class="demo-badge">Démo 4</span>
               </label>
             </li>
           </ul>
@@ -783,17 +775,6 @@
                   aria-label="Journalisation et audit"
                 />
                 <span>Journalisation et audit</span>
-              </label>
-            </li>
-            <li>
-              <label for="performance">
-                <input
-                  type="checkbox"
-                  id="performance"
-                  title="Performance"
-                  aria-label="Performance et optimisations"
-                />
-                <span>Performance et optimisations</span>
               </label>
             </li>
           </ul>
@@ -907,6 +888,7 @@
                   >Validation des besoins avec les parties prenantes
                   (client/clientes - dev - produit …)</span
                 >
+                <span class="demo-badge">Optionnel</span>
               </label>
             </li>
           </ul>
@@ -924,17 +906,7 @@
                   aria-label="Organisation en couches de l'application"
                 />
                 <span>Organisation en couches de l'application</span>
-              </label>
-            </li>
-            <li>
-              <label for="patterns-utilises">
-                <input
-                  type="checkbox"
-                  id="patterns-utilises"
-                  title="Patterns architecturaux"
-                  aria-label="Patterns architecturaux utilisés (MVC, MVVM, etc.)"
-                />
-                <span>Patterns architecturaux utilisés (MVC, MVVM, etc.)</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -949,6 +921,7 @@
                   >Mécanismes d'intégration et d'interopérabilité (api rest,
                   soap, graphql etc … format json, xml etc …)</span
                 >
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
           </ul>
@@ -1002,6 +975,7 @@
                   aria-label="Scripts de création de la base de données"
                 />
                 <span>Scripts de création de la base de données</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
             <li>
@@ -1013,6 +987,7 @@
                   aria-label="Sécurisation des accès à la base de données"
                 />
                 <span>Sécurisation des accès à la base de données</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
           </ul>
@@ -1032,6 +1007,7 @@
                 <span
                   >Stratégie d'accès aux données (ORM, DAO, Repository)</span
                 >
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
@@ -1043,6 +1019,7 @@
                   aria-label="Implémentation des requêtes SQL"
                 />
                 <span>Implémentation des requêtes SQL</span>
+                <span class="demo-badge">Démo 2</span>
               </label>
             </li>
             <li>
