feat: Create badge project

--- a/index.html
+++ b/index.html
@@ -775,6 +775,7 @@
                   aria-label="Journalisation et audit"
                 />
                 <span>Journalisation et audit</span>
+                <span class="demo-badge">Optionnel</span>
               </label>
             </li>
           </ul>
@@ -792,6 +793,7 @@
                   aria-label="Clarté et structure du rapport"
                 />
                 <span>Clarté et structure du rapport</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
@@ -806,6 +808,7 @@
                   >Illustrations pertinentes (captures d'écran,
                   diagrammes)</span
                 >
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
@@ -817,17 +820,7 @@
                   aria-label="Glossaire des termes techniques"
                 />
                 <span>Glossaire des termes techniques</span>
-              </label>
-            </li>
-            <li>
-              <label for="presentation">
-                <input
-                  type="checkbox"
-                  id="presentation"
-                  title="Support de présentation"
-                  aria-label="Support de présentation (diaporama) préparé"
-                />
-                <span>Support de présentation (diaporama) préparé</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
@@ -857,6 +850,7 @@
                   aria-label="Inclure un résumé en anglais"
                 />
                 <span>Inclure un résumé en anglais</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
@@ -867,7 +861,8 @@
                   title="Documentation technique en anglais"
                   aria-label="Documentation technique en anglais"
                 />
-                <span>Documentation technique en anglais</span>
+                <span>Documentation technique en anglais (commentaire de code, Swagger, Readme, sauf si vous êtes en capacité d'expliquer pourquoi le choix d'une autre langue )</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
           </ul>
