feat: Update filter

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       <button class="filter-btn" data-filter="demo2">Démo 2</button>
       <button class="filter-btn" data-filter="demo3">Démo 3</button>
       <button class="filter-btn" data-filter="demo4">Démo 4</button>
+      <button class="filter-btn" data-filter="dossier">Dossier projet</button>
+      <button class="filter-btn" data-filter="optionnel">Optionnel</button>
+
+      <button class="filter-btn" data-filter="rncp-blanc">RNCP blanc</button>
     </div>
 
     <main class="container">
@@ -299,7 +303,7 @@
                   aria-label="Gestion des risques et problèmes rencontrés"
                 />
                 <span>Gestion des risques et problèmes rencontrés</span>
-                <span class="demo-badge">RNCP blanc</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
           </ul>
@@ -396,7 +400,7 @@
                   aria-label="Optimisation et indexation"
                 />
                 <span>Optimisation et indexation</span>
-                <span class="demo-badge">RNCP blanc Optionnel</span>
+                <span class="demo-badge">Optionnel</span>
               </label>
             </li>
             <li>
@@ -452,7 +456,7 @@
                   aria-label="Mise en cache et optimisation des performances"
                 />
                 <span>Mise en cache et optimisation des performances</span>
-                <span class="demo-badge">RNCP blanc - Optionnel</span>
+                <span class="demo-badge">Optionnel</span>
               </label>
             </li>
           </ul>
@@ -628,7 +632,7 @@
               <label>
                 <input type="checkbox" aria-label="Documentation utilisateur" />
                 <span>Documentation utilisateur/utilisatrices</span>
-                <span class="demo-badge">RNCP blanc - Optionnel</span>
+                <span class="demo-badge">Optionnel</span>
               </label>
             </li>
             <li>
@@ -740,6 +744,7 @@
                   aria-label="Respect des standards de code"
                 />
                 <span>Respect des standards de code</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
@@ -751,6 +756,7 @@
                   aria-label="Gestion des erreurs et exceptions"
                 />
                 <span>Gestion des erreurs et exceptions</span>
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
@@ -764,6 +770,7 @@
                 <span
                   >Protection contre les vulnérabilités courantes (OWASP)</span
                 >
+                <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
             <li>
