--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script type="module" src="js/app.js"></script>
   </head>
   <body>
     <header class="header">
@@ -26,11 +28,6 @@
           couvre bien l'ensemble des compétences évaluées pour l'obtention du
           titre RNCP.
         </p>
-        <div class="divider"></div>
-        <p class="description">
-          Nous mettons à votre disposition une série de badges pour vous accompagner dans la préparation de vos différentes démos.
-          Parce que chacun·e progresse à son rythme, nous proposons également des options complémentaires, que vous pouvez explorer librement selon vos envies, vos compétences et vos objectifs.
-        </p>
       </div>
     </header>
 
@@ -42,6 +39,22 @@
       <button class="filter-btn" data-filter="demo4">Démo 4</button>
       <button class="filter-btn" data-filter="dossier">Dossier projet</button>
       <button class="filter-btn" data-filter="optionnel">Optionnel</button>
+    </div>
+
+    <!-- Barre de progression et boutons d'export -->
+    <div class="progress-sticky">
+      <div class="container">
+        <div class="progress-container">
+          <div class="progress-bar-container">
+            <div id="progress-bar" class="progress-bar" style="width: 0%"></div>
+          </div>
+          <span id="progress-text">0%</span>
+        </div>
+
+        <div class="export-import-container">
+          <button onclick="exportToPDF()" class="export-btn">Exporter en PDF</button>
+        </div>
+      </div>
     </div>
 
     <main class="container">
@@ -1039,6 +1052,5 @@
         </div>
       </section>
     </main>
-    <script src="script.js"></script>
   </body>
 </html>
