fix: update export pdf"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="export-import-container">
-          <button onclick="exportToPDF()" class="export-btn">Exporter en PDF</button>
+          <button class="export-btn">Exporter en PDF</button>
         </div>
       </div>
     </div>
