--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="progress-sticky">
       <div class="container">
         <div class="progress-container">
-          <div class="progress-bar-container">
-            <div id="progress-bar" class="progress-bar" style="width: 0%"></div>
+          <div class="progress-bar">
+            <div id="progress-fill" class="progress-fill" style="width: 0%"></div>
           </div>
           <span id="progress-text">0%</span>
         </div>
