feat: add content checklist a11y and update export pdf

--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
           <h3>Développement d'interfaces utilisateur.ices</h3>
           <ul class="checklist">
             <li>
+              <label for="charte-graphique">
+                <input
+                  type="checkbox"
+                  id="charte-graphique"
+                  title="Création d'une charte graphique"
+                  aria-label="Création d'une charte graphique"
+                />
+                <span>Création d'une charte graphique</span>
+                <span class="demo-badge">Démo 1</span>
+              </label>
+            </li>
+            <li>
+                <label for="a11y-charte">
+                  <input
+                    type="checkbox"
+                    id="a11y-charte"
+                    title="Charte graphique accessible"
+                    aria-label="Charte graphique accessible"
+                  />
+                  <span>Charte graphique accessible</span>
+                  <span class="demo-badge">Démo 1</span>
+                </label>
+              </li>
+              <li>
               <label for="maquettes">
                 <input
                   type="checkbox"
