feat: add version in html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           couvre bien l'ensemble des compétences évaluées pour l'obtention du
           titre RNCP.
         </p>
+        <small class="version-tag" id="version-number"></small>
       </div>
     </header>
 
