feat: Create percent in filter

--- a/index.html
+++ b/index.html
@@ -52,6 +52,27 @@
           <span id="progress-text">0%</span>
         </div>
 
+        <div class="demo-progress">
+          <div class="demo-progress-item">
+            <span class="demo-badge-progress">Démo 1: <span id="demo1-text">0%</span></span>
+          </div>
+          <div class="demo-progress-item">
+            <span class="demo-badge-progress">Démo 2: <span id="demo2-text">0%</span></span>
+          </div>
+          <div class="demo-progress-item">
+            <span class="demo-badge-progress">Démo 3: <span id="demo3-text">0%</span></span>
+          </div>
+          <div class="demo-progress-item">
+            <span class="demo-badge-progress">Démo 4: <span id="demo4-text">0%</span></span>
+          </div>
+          <div class="demo-progress-item">
+            <span class="demo-badge-progress">Dossier: <span id="dossier-text">0%</span></span>
+          </div>
+          <div class="demo-progress-item">
+            <span class="demo-badge-progress">Optionnel: <span id="optionnel-text">0%</span></span>
+          </div>
+        </div>
+
         <div class="export-import-container">
           <button class="export-btn">Exporter en PDF</button>
         </div>
