fix: petites fautes et tests de sécurité optionnels

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                   title="Sécurité déploiement"
                   aria-label="Sécurité du déploiement"
                 />
-                <span>Sécurité du déploiemen (Variables d'environnement, Acès SSH, Principe de moindre privilège, HTTPS en production, etc ...)</span>
+                <span>Sécurité du déploiement (Variables d'environnement, Accès SSH, Principe de moindre privilège, HTTPS en production, etc ...)</span>
                 <span class="demo-badge">Démo 4</span>
               </label>
             </li>
@@ -669,7 +669,7 @@
                   aria-label="Tests de sécurité et de performance"
                 />
                 <span>Tests de sécurité et de performance</span>
-                <span class="demo-badge">Démo 3</span>
+                <span class="demo-badge">Optionnel</span>
               </label>
             </li>
           </ul>
