fix: prise en compte des retours et suggestion de laila :)

--- a/index.html
+++ b/index.html
@@ -351,18 +351,6 @@
                 <span class="demo-badge">Démo 1</span>
               </label>
             </li>
-            <li>
-              <label for="risques">
-                <input
-                  type="checkbox"
-                  id="risques"
-                  title="Gestion des risques"
-                  aria-label="Gestion des risques et problèmes rencontrés"
-                />
-                <span>Gestion des risques et problèmes rencontrés</span>
-                <span class="demo-badge">Dossier projet</span>
-              </label>
-            </li>
           </ul>
         </div>
       </section>
@@ -407,26 +395,14 @@
           <h3>Architecture logicielle</h3>
           <ul class="checklist">
             <li>
-              <label for="architecture">
-                <input
-                  type="checkbox"
-                  id="architecture"
-                  title="Architecture"
-                  aria-label="Architecture globale de l'application"
-                />
-                <span>Architecture globale de l'application</span>
-                <span class="demo-badge">Démo 2</span>
-              </label>
-            </li>
-            <li>
               <label for="patterns-archi">
                 <input
                   type="checkbox"
                   id="patterns-archi"
-                  title="Patterns d'architecture"
-                  aria-label="Patterns d'architecture utilisés"
+                  title="Descritpion de l'architecture logicielle"
+                  aria-label="Descritpion de l'architecture logicielle"
                 />
-                <span>Patterns d'architecture utilisés (Clean Architecture, Hexagonal, Microservices, Event-Driven Architecture)</span>
+                <span>Description de l'architecture logicielle utilisée</span>
                 <span class="demo-badge">Démo 2</span>
               </label>
             </li>
@@ -484,10 +460,10 @@
                   type="checkbox"
                   id="orm"
                   title="ORM"
-                  aria-label="Utilisation d'un ORM ou d'un framework de persistance"
+                  aria-label="Utilisation d'un ORM, explication de l'utilisation et implémentation"
                 />
                 <span
-                  >Utilisation d'un ORM ou d'un framework de persistance</span
+                  >Utilisation d'un ORM, explication de l'utilisation et implémentation</span
                 >
                 <span class="demo-badge">Démo 3</span>
               </label>
@@ -527,10 +503,10 @@
                 <input
                   type="checkbox"
                   id="doc-api"
-                  title="Documentation API"
-                  aria-label="Documentation technique de l'API"
+                  title="Documentation technique de l'API (Uniquement si votre projet est une API)"
+                  aria-label="Documentation technique de l'API (Uniquement si votre projet est une API)"
                 />
-                <span>Documentation technique de l'API</span>
+                <span>Documentation technique de l'API (Uniquement si votre projet est une API)</span>
                 <span class="demo-badge">Démo 2</span>
               </label>
             </li>
@@ -668,8 +644,8 @@
                   title="Tests de sécurité"
                   aria-label="Tests de sécurité et de performance"
                 />
-                <span>Tests de sécurité et de performance</span>
-                <span class="demo-badge">Optionnel</span>
+                <span>Tests de sécurité</span>
+                <span class="demo-badge">Démo 3</span>
               </label>
             </li>
           </ul>
@@ -915,18 +891,6 @@
                   aria-label="Inclure un résumé en anglais"
                 />
                 <span>Inclure un résumé en anglais</span>
-                <span class="demo-badge">Dossier projet</span>
-              </label>
-            </li>
-            <li>
-              <label for="doc-tech-en">
-                <input
-                  type="checkbox"
-                  id="doc-tech-en"
-                  title="Documentation technique en anglais"
-                  aria-label="Documentation technique en anglais"
-                />
-                <span>Documentation technique en anglais (commentaire de code, Swagger, Readme, sauf si vous êtes en capacité d'expliquer pourquoi le choix d'une autre langue )</span>
                 <span class="demo-badge">Dossier projet</span>
               </label>
             </li>
