feat: clarifier la longueur du dossier

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           couvre bien l'ensemble des compétences évaluées pour l'obtention du
           titre RNCP.
         </p>
+        <p>
+          Hors page de garde, sommaire et annexes, le dossier projet comporte entre 40 et 60 pages au maximum, schémas et illustrations compris. Les annexes comportent 40 pages au maximum.
+        </p>
         <small class="version-tag" id="version-number"></small>
       </div>
     </header>
